[gd_scene load_steps=6 format=2]

[ext_resource path="res://Courier.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/icon.png-487276ed1e3a0c39cad0279d744ee560.stex"

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 0.5

[sub_resource type="RectangleShape2D" id=4]

[node name="Courier" type="PathFollow2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = SubResource( 1 )

[node name="CourierArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CourierArea"]
shape = SubResource( 2 )

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
physics_material_override = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 4 )
[connection signal="body_entered" from="CourierArea" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
